# gcc

./: ChangeLog  Makefile.def  Makefile.in  config-ml.in  configure  configure.ac
boehm-gc/: pthread_support.c
config/: acx.m4  pkg.m4
gcc/: Makefile.in  collect2.c  common.opt  config.gcc  config.in  configure  configure.ac  cppdefault.c  cppdefault.cc  defaults.h  double-int.h  emit-rtl.c  gcc.c  gcc.cc  gensupport.c  incpath.c  incpath.cc  intl.c  intl.cc  match.pd  opts.c  prefix.c  system.h  toplev.cc  wide-int.h
gcc/ada/: Make-generated.in  Makefile.rtl  gnatchop.adb  gnathtml.pl  gnatlink.adb  gsocket.h  link.c  make.adb  mdll-utl.adb  mlib-tgt-specific-linux.adb  mlib-utl.adb  mlib.adb  osint.adb  osint.ads  prj-env.adb  prj-makr.adb  s-oscons-tmplt.c  s-osinte-kfreebsd-gnu.adb  s-osinte-kfreebsd-gnu.ads  sdefault.ads  sem_prag.adb  terminals.c  uintp.adb  uintp.ads
gcc/ada/gcc-interface/: Make-lang.in  Makefile.in  config-lang.in
gcc/ada/libgnarl/: s-osinte__kfreebsd-gnu.ads
gcc/c/: c-decl.c  c-parser.cc
gcc/c-family/: c-common.c  c-common.h  c-cppbuiltin.cc  c-lex.c  c-lex.cc  c-opts.cc  c-pragma.cc  c-pragma.h
gcc/config/: gnu-user.h  gnu.h
gcc/config/aarch64/: aarch64-linux.h  aarch64.c  t-aarch64-linux
gcc/config/alpha/: alpha.c  alpha.cc  linux-elf.h
gcc/config/arc/: arc-arch.h  t-multilib-linux
gcc/config/arm/: linux-eabi.h  linux-elf.h  t-linux-eabi
gcc/config/i386/: gnu-user.h  gnu-user64.h  t-kfreebsd  t-linux64
gcc/config/ia64/: ia64.cc  linux.h
gcc/config/loongarch/: t-linux
gcc/config/m68k/: linux.h
gcc/config/mips/: gnu-user.h  mips.h  mips.opt  t-linux64
gcc/config/pa/: pa-linux.h
gcc/config/riscv/: linux.h
gcc/config/rs6000/: driver-rs6000.c  driver-rs6000.cc  linux64.h  ppc-asm.h  rs6000.cc  sysv4.h  t-linux  t-linux64
gcc/config/s390/: linux.h  s390.c  t-linux64
gcc/config/sh/: linux.h  t-linux
gcc/config/sparc/: linux.h  linux64.h  t-linux64
gcc/config/tilegx/: t-tilegx
gcc/cp/: decl2.c  lang-specs.h  parser.cc  pt.c
gcc/d/: d-spec.cc  gdc.texi
gcc/doc/: gm2.texi
gcc/go/: Make-lang.in
gcc/jit/: Make-lang.in  jit-playback.cc
gcc/objc/: lang-specs.h
gcc/objcp/: lang-specs.h
gcc/testsuite/ada/acats/: run_acats  run_all.sh
gcc/testsuite/g++.dg/tls/: thread_local-order2.C
gcc/testsuite/g++.dg/tsan/: pthread_cond_clockwait.C
gcc/testsuite/gcc.dg/cpp/: source_date_epoch-1.c
gcc/testsuite/gcc.dg/guality/: guality.exp
gcc/testsuite/gcc.target/i386/: avx512f-helper.h
gcc/testsuite/gcc.target/mips/: mips.exp
gcc/testsuite/go.test/: go-test.exp
gcc/testsuite/lib/: gcc-dg.exp  gnat.exp
gnattools/: Makefile.in
gotools/: Makefile.am  Makefile.in  configure.ac
include/: ChangeLog  demangle.h  dwarf2.def  dwarf2.h  hashtab.h  libiberty.h
libada/: Makefile.in  configure.ac
libada-sjlj/: Makefile.in  configure.ac
libcc1/: Makefile.am  Makefile.in  configure.ac
libcilkrts/: configure.tgt
libcpp/: Makefile.in  init.c  init.cc  system.h
libdecnumber/: configure.ac
libffi/: configure.ac
libffi/src/: closures.c
libgcc/: config.host  configure.ac
libgcc/config/: t-libunwind-elf
libgcc/config/i386/: freebsd-unwind.h
libgnatprj/: Makefile.in  configure.ac
libgnatvsn/: Makefile.in  configure
libgo/: Makefile.am  Makefile.in  configure.ac  mksysinfo.sh
libgo/go/cmd/go/: build.go
libgo/go/debug/elf/: file.go  file_test.go
libgo/go/internal/syscall/unix/: getrandom_linux_mips64x.go
libgo/go/syscall/: exec_linux.go
libgo/testsuite/lib/: libgo.exp
libgomp/: omp.h.in
libiberty/: ChangeLog  Makefile.in  cp-demangle.c  cp-demint.c  dwarfnames.c  functions.texi  hashtab.c
libiberty/testsuite/: demangle-expected
libitm/: configure.tgt
libjava/: Makefile.am  Makefile.in  configure.ac  stacktrace.cc
libjava/classpath/: configure.ac
libjava/classpath/m4/: acinclude.m4
libjava/gnu/classpath/: natSystemProperties.cc
libjava/sysdep/generic/: backtrace.h
libjava/testsuite/: Makefile.in
libjava/testsuite/lib/: libjava.exp
libobjc/: Makefile.in  configure.ac  gc.c  memory.c  objects.c
libstdc++-v3/: acinclude.m4
libstdc++-v3/doc/doxygen/: mainpage.html  user.cfg.in
libstdc++-v3/doc/html/: api.html
libstdc++-v3/doc/xml/: api.xml
libstdc++-v3/include/: Makefile.am  Makefile.in
libstdc++-v3/include/bits/: stl_algobase.h
libstdc++-v3/python/: Makefile.am  Makefile.in
libstdc++-v3/scripts/: run_doxygen
libstdc++-v3/src/: Makefile.am  Makefile.in
libstdc++-v3/testsuite/lib/: libstdc++.exp
zlib/: crc32.c
